Added cello logo and product column

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<!-- Sticky Header -->
 	<header class="sticky_h">
 	    <div class="lc">
-	        <a href="#"><img src="images/logo_white_sm 2.png" class="logo" alt="Life Coded Logo" /></a>
+	        <a href="#"><img src="images/Logo-purple.png" class="logo" alt="Life Coded Logo" width="120px" /></a>
 
 			<nav id="nav" class="nav nav-black sticky_n">
 	    		<ul class="nav-list">
@@ -182,25 +182,24 @@
 		        		<h3>Our Products</h3>
 	       			</div>
 
-			        <div class="lc fw">
-			        	<div class="text-box reveal">
-			        		<div class="product_title">
-			                    <img class="product_logo" src="images/Mosaic_logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
-			        		</div>
-		                    <!-- <p>Mosaic allows teams to easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and replace middle management.</p> -->
-		                    <h1>manages teamwork</h1>
-		                    <p><a href="https://mosaicapp.com" target="_blank">http://mosaicapp.com</a></p>
-			            </div>
-			        </div>
-
-		        	<div class="lc fw">
-		                <div class="text-box reveal">
-		                	<div class="product_title">
-			                    <h1>Chello</h1>
+			        <div class="lc">
+			        	<div class="flex-grid g-2up reveal products_grid">
+			        		<div class="gi">
+				        		<div class="product_title">
+				                    <img class="product_logo" src="images/Mosaic_logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
+				        		</div>
+			                    <!-- <p>Mosaic allows teams to easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and replace middle management.</p> -->
+			                    <h1>manages teamwork</h1>
+			                    <p><a href="https://mosaicapp.com" target="_blank">http://mosaicapp.com</a></p>
+			            	</div>
+			            	<div class="gi">
+			                	<div class="product_title">
+				                    <img class="product_logo" src="images/Cello-logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
+			                	</div>
+								<h1>manages communication</h1>
+			                    <p class="gray_f">coming soon...</p>
 		                	</div>
-							<h1>manages communication</h1>
-		                    <p class="gray_f">coming soon...</p>
-		                </div>
+			        	</div>
         			</div>
     			</div>
 		</section>
@@ -245,7 +244,7 @@
 	            <div class="table">
 		            <ul class="job-list">
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-1">React.js Software Engineer</button></li>
-		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Lead Frontend Web Developer</button></li>
+		            	<!-- <li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Lead Frontend Web Developer</button></li> -->
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-2">Sr. Product Manager</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-4">Sales Associate</button></li>
 		            	<!-- <li><button class="button btn-w" href="" target="_blank">PR & Marketing Intern</button></li> -->
