Product section update

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 	        <div class="tagline reveal" id="tagline">
-	        <h1 class="intro">Project Management Software is broken for small businesses.</h1>
+	        <h1 class="intro">Project Management Software is broken for most industries.</h1>
 	        <h2 class="intro_h2">Life Coded is working on fixing it.</h2>
 	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
@@ -183,7 +183,7 @@
 	       			</div>
 
 			        <div class="lc">
-			        	<div class="flex-grid g-2up reveal products_grid">
+			        	<div class="products_grid flex-grid g-2up reveal">
 			        		<div class="gi">
 				        		<div class="product_title">
 				                    <img class="product_logo" src="images/Mosaic_logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
@@ -194,7 +194,7 @@
 			            	</div>
 			            	<div class="gi">
 			                	<div class="product_title">
-				                    <img class="product_logo" src="images/Cello-logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
+				                    <img class="product_logo" src="images/Cello-logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'" width="250px">
 			                	</div>
 								<h1>manages communication</h1>
 			                    <p class="gray_f">coming soon...</p>
@@ -478,11 +478,11 @@
 	                <p class="copyright">&copy; 2017 Life Coded, LLC.</p>
 	            </div>
 	            <div class="gi">
-		            <ul class="icons inline-list social-list">
-		            	<!-- <a href="https://twitter.com/projectmosaic"><li class="ti-twitter-alt"></li></a> -->
+		            <!-- <ul class="icons inline-list social-list">
+		            	<a href="https://twitter.com/projectmosaic"><li class="ti-twitter-alt"></li></a>
 		            	<a href="https://www.linkedin.com/company/life-coded"><li class="ti-linkedin"></li></a>
-		            	<!-- <a href=""><li class="ti-dribbble circle-icon"></li></a> -->
-		            </ul>
+		            	<a href=""><li class="ti-dribbble circle-icon"></li></a>
+		            </ul> -->
 		            <ul class="company-info">
 	                	<li>152 Madison Ave. 16th FL. New York, NY, 10016</li>
 	                	<li><a href="mailto:info@lifecoded.com">info@lifecoded.com</a></li>
