Fixed cello logo

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			            	</div>
 			            	<div class="gi">
 			                	<div class="product_title">
-				                    <img class="product_logo" src="images/Cello-logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'" width="250px">
+				                    <img class="product_logo" src="images/Cello-logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
 			                	</div>
 								<h1>manages communication</h1>
 			                    <p class="gray_f">coming soon...</p>
@@ -236,7 +236,7 @@
 		</div>
 	</section>
 
-	<section class="hiring white-space" id="hiring">
+	<section class="hiring" id="hiring">
 	    <div class="lc">
 	        <div class="center-e">
 	            <h1>We're hiring</h1>
