Optimized to mobile view

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 		<section class="products" id="products">
 			    <div class="blueblack">
 	    		    <div class="lc">
-		        		<h3>Our Products</h3>
+		        		<h2>Our Products</h2>
 	       			</div>
 
 			        <div class="lc">
-			        	<div class="products_grid flex-grid g-2up reveal">
+			        	<div class="products_grid flex-grid g g-2up reveal">
 			        		<div class="gi">
 				        		<div class="product_title">
 				                    <img class="product_logo" src="images/Mosaic_logo.svg" onerror="this.onerror=null; this.src='Mosaic_logo.png'">
@@ -470,26 +470,13 @@
 	<!-- Begin Footer -->
 	<footer id="footer" class="footer" role="contentinfo">
 		<div class="lc">
-	        <div class="g g-2up">
-	            <div class="gi">
-	                <div class="footer_logo">
-	                    <a href="#"><img src="images/logo-purple.png" class="logo" alt="Life Coded Black" width="120px" /></a>
-	                </div>
-	                <p class="copyright">&copy; 2017 Life Coded, LLC.</p>
-	            </div>
-	            <div class="gi">
-		            <!-- <ul class="icons inline-list social-list">
-		            	<a href="https://twitter.com/projectmosaic"><li class="ti-twitter-alt"></li></a>
-		            	<a href="https://www.linkedin.com/company/life-coded"><li class="ti-linkedin"></li></a>
-		            	<a href=""><li class="ti-dribbble circle-icon"></li></a>
-		            </ul> -->
-		            <ul class="company-info">
-	                	<li>152 Madison Ave. 16th FL. New York, NY, 10016</li>
-	                	<li><a href="mailto:info@lifecoded.com">info@lifecoded.com</a></li>
-	                	<li>(212) 597-9333</li>
-	                </ul>
-	            </div>
-	        </div>
+            <div class="company-info">
+            	<p>152 Madison Ave. 16th FL. New York, NY, 10016 | T.212.597.9333 | <a href="mailto:info@lifecoded.com">info@lifecoded.com</a></p>
+            	<!-- 	                <div class="footer_logo">
+                    <a href="#"><img src="images/logo-purple.png" class="logo" alt="Life Coded Black" width="120px" /></a>
+                </div> -->
+            	<p class="copyright">&copy; 2017 Life Coded, LLC.</p>
+            </div>
 		</div>
 	</footer>
 	<!-- End Footer --></div>
