--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 	<header class="header full-width" role="banner">
 	    <div class="lc">
-    	<a href="#"><img src="images/Logo-purple.png" class="logo" alt="Life Coded Black" width="120px" /></a>
+    	<a href="#"><img src="images/logo-purple.png" class="logo" alt="Life Coded Black" width="120px" /></a>
     	<nav id="nav" class="nav nav-white">
     		<ul class="nav-list">
     			<li><a href="#">Home</a></li>
@@ -88,7 +88,7 @@
 
 
 	        <div class="tagline reveal" id="tagline">
-	        <h1 class="intro">Project Management Software is broken for most industries.</h1>
+	        <h1 class="intro">Project Management Software is broken for small businesse.</h1>
 	        <h2 class="intro_h2">Life Coded is working on fixing it.</h2>
 	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
