Updated job list

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 		            <ul class="job-list">
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-1">Sr. Front-end Software Engineer</button></li>
 		            	<!-- <li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Lead Frontend Web Developer</button></li> -->
-		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-2">Sr. Product Manager</button></li>
-		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-4">Sales Associate</button></li>
+		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-2">Chief Marketing Officer</button></li>
+		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Business Development Representative></li>
 		            	<!-- <li><button class="button btn-w" href="" target="_blank">PR & Marketing Intern</button></li> -->
 		            </ul>
 	            </div>
@@ -298,29 +298,21 @@
 		            <div class="md-modal" id="modal-2">
 	            		<a class="md-close">Close</a>
 		            	<div class="md-content">
-		            		<h3>Sr. Product Manager</h3>
+		            		<h3>Chief Marketing Officer</h3>
 		            		<div>
 		            			<h4>Job Description</h4>
-		            			<p>With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible. We’ve also spent years studying user behavior to create the most intuitive interfaces. We’re currently building two project management tools: Mosaic and Chello. While Mosaic manages high-level project information, Chello handles the day-to-day back and forth between a team. Both of our latest apps use cutting edge frameworks, including React/React Native.</p>
+		            			<p>Mosaic is seeking a Marketing Mastermind to help make Mosaic the leading app for growing businesses. We’re seeking a guru with experience in scaling brand awareness and expanding customer reach. If you’re the right fit, you’ll have done this before.</p>
+		            			<p>Mosaic app is transforming the project management space with an Artificial Intelligence infusion to results in a crisp, clean interface with all the essential functionality. Mosaic helps users share, plan and track their projects, so they can spend more time doing what they love.</p>
+		            			<p>For us, Mosaic more than a project management app. We're playing a small part in everything that teams all over the world create together using our app. Join us.</p>
 		            			<hr>
 		            			<h4>Our Vision</h4>
 		            			<p>Founded in 2012, Life Coded, LLC is a startup specializing in the design and development of productivity apps. We make productivity products to help people accomplish bigger goals with less effort. We are currently building two project management tools - Chello and Mosaic. Mosaic manages the high level project info. Chello is the day to day back and forth between the team. Both of our latest apps are using cutting edge frameworks including React.js and React Native for building Mosaic and Chello for people who don't have time for project management.Here at Life Coded, aesthetic design is in our DNA. We’re also obsessed with user behavior and making things as simple as possible for them. Our mission is in our name; Life and Coded - real world software design. Check out Mosaic at <a href="mosaicapp.com" target="_blank">https://mosaicapp.com</a></p>
 		            			<hr>
 		            			<h4>Requirement</h4>
 		            			<ul class="list-d">
-		            				<li>Manage the entire development lifecycle, working with our design team, engineering team, and other stakeholders</li>
-		            				<li>Define product specifications, establish milestones and KPIs, and manage quality assurance activities</li>
-		            				<li>Manage the prioritization of new features and bugs</li>
-		            				<li>Organize ideas for features and improvements for Life Coded products, prioritize feature requests, and maintain part of the roadmap</li>
-		            				<li>Design product enhancements and communicate designs through presentations</li>
-		            				<li>Coordinate feature launches, including testing, documentations, training, customer communication, and adoption measurement</li>
-		            				<li>Review requests from customers, partners, and employees, design solutions for them, and drive their implementation</li>
-		            				<li>Present current and future capabilities to users</li>
-		            				<li>Create and manage feature plans, project plans and specifications</li>
-		            				<li>Perform research and development on future features, including assessment of value, usability and feasibility of features to customers and partners</li>
-		            				<li>Manage specifications and preparation of prototypes, wireframes and design, including flow and use cases</li>
-		            				<li>Explore complementary and competitive products, and meet with partners</li>
-		            				<li>Track and report on project progress, costs, and status</li>
+		            				<li>10+ years experience working with startups and high growth companies</li>
+		            				<li>Prior experience working on a SaaS or PaaS product</li>
+		            				<li>Self starter with a strong business acumen and ability to independently lead this segment of the business</li>
 		            			</ul>
 		            			<hr>
 		            			<h4>Perks</h4>
@@ -342,38 +334,29 @@
 		            <div class="md-modal" id="modal-3">
 	            		<a class="md-close">Close</a>
 		            	<div class="md-content">
-		            		<h3>Lead Front-end Developer</h3>
+		            		<h3>Business Development Representative</h3>
 		            		<div>
 		            			<h4>Job Description</h4>
-		            			<p>Think current project management apps are broken?<br>
-		            			Join Mosaic to help build an innovative project management tool.</p>
-		            			<p>Mosaic is seeking a Lead Frontend Developer/React.js expert to join our team. This role will be working on creating Mosaic, the simplest way to manage teamwork (mosaicapp.com). This is a rare chance to work at a relatively early stage of development on core functionality with cutting edge frameworks, patented automation and heavy reliance on artificial intelligence.</p>
-		            			<p>For this position, we're looking past the black and white requirements to find the right person to help us develop Mosaic's beautiful and innovative user interface. As we grow rapidly, you will be a cornerstone in the direction and development of our product suite and will have the opportunity to make a real impact in a very short period of time. We are in a market competing with Trello (recently sold for $425M) and Quip (recently sold for $750M).</p>
+		            			<p>Want to be a part of a revolution in productivity tech?</p>
+		            			<p>Mosaic app is transforming the project management space with an Artificial Intelligence infusion to results in a crisp, clean interface with all the essential functionality. Mosaic helps users share, plan and track their projects, so they can spend more time doing what they love.</p>
+		            			<p>As Business Development Representative, you will work as a part of an integral team in driving the client acquisition and adoption of Mosaic. Business Development professionals at Mosaic run full cycle sales; managing the process through lead generation, product demos, team onboarding, training and account management. We're seeking a people-person with an unmatched drive for sales and customer service. Mosaic provides endless growth potential and involvement in the direction of the client aquisition function.</p>
+		            			<p>For us, Mosaic more than a project management app. We're playing a small part in everything that teams all over the world create together using our app. Join us.</p>
 		            			<hr>
 		            			<h4>Our Vision</h4>
 		            			<p>Founded in 2012, Life Coded, LLC is a startup specializing in the design and development of productivity apps. We make productivity products to help people accomplish bigger goals with less effort. We are currently building two project management tools - Chello and Mosaic. Mosaic manages the high level project info. Chello is the day to day back and forth between the team. Both of our latest apps are using cutting edge frameworks including React.js and React Native for building Mosaic and Chello for people who don't have time for project management.Here at Life Coded, aesthetic design is in our DNA. We’re also obsessed with user behavior and making things as simple as possible for them. Our mission is in our name; Life and Coded - real world software design. Check out Mosaic at <a href="mosaicapp.com" target="_blank">https://mosaicapp.com</a></p>
 		            			<hr>
 		            			<h4>Responsibilities</h4>
 		            			<ul class="list-d">
-		            				<li>Collaborate with a small team, working with cutting edge technology </li>
-		            				<li>Take ownership of the frontend development of Mosaic</li>
-		            				<li>Brainstorm and execute the development of new features, overseeing projects from A-Z</li>
-		            				<li>Work closely with other business units in the development process, design, product, and marketing</li>
+		            				<li>Identify market segments and generate strong leads</li>
+		            				<li>Prospect leads through carefully crafted email campaigns</li>
+		            				<li>Book and oversee product demonstrations including the preparation of marketing materials and presentations</li>
 		            			</ul>
-		            			<hr>
-		            			<h4>Our Stack</h4>
-		            			<p>JavaScript, React.js, React Native, Ruby on Rails, Python</p>
 		            			<hr>
 		            			<h4>Requirement</h4>
 		            			<ul class="list-d">
-		            				<li>1+ years of hands on React.js experience is required</li>
-		            				<li>5+ years of coding experience</li>
-		            				<li>Experience with Software as a Service</li>
-		            				<li>Experience developing reliable rich JavaScript web apps</li>
-		            				<li>Developed and released applications in a production environment with high user traffic</li>
-		            				<li>Bonus points for React Native, mobile development, or back end experience</li>
-		            				<li>Bachelor's Degree required; Computer Science a plus</li>
-		            				<li>Working from our New York City office (at 32nd & Madison) is required</li>
+		            				<li>1 - 5 years of professional sales experience</li>
+		            				<li>Bachelor's degree is required</li>
+		            				<li>Experience with a SaaS product is highly preferred</li>
 		            			</ul>
 		            			<hr>
 		            			<h4>Perks</h4>
